tests/NormalTests/paczka1/fuzzy1/89616897.err
Error in line 1: CoevR A864 35,5
Error in line 2: CuMZo S235 37,0
Error in line 3: CoevR S235 59,1
Error in line 19: CuMZo A864 8,0
Error in line 26: i37aHIMwG0 S235 53,0
Error in line 29: i37aHIMwG0 S32 32,4
Error in line 34: i37aHIMwG0 S235 100,30
Error in line 32: CuMZo A102 44,8
Error in line 40: PXX At02 t90,2
